user_practice.txt

(base) C:\Users\Admin>python
Python 3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 45+72
117
>>> x=7
>>> y=3
>>> x+y
10
>>> total=x+y
>>> total
10
>>> type (x)
<class 'int'>
>>> type(10.5)
<class 'float'>
>>> 7*4
28
>>> 2
2
>>> 2**10
1024
>>> 9**(1/2)
3.0
>>> 7/4
1.75
>>> 7//4
1
>>> 3//5
0
>>> 14//2
7
>>> -13/4
-3.25
>>> -13//4
-4
>>> 123/0
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ZeroDivisionError: division by zero
>>> z+7
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'z' is not defined
>>> 17%5
2
>>> 7.5%3.5
0.5
>>> 10*(5+3)
80
>>> 10
10
>>> 10*5+3
53
>>> 3*(4-5)
-3
>>> 3*4-5
7
>>> print('Welcome to python!')
Welcome to python!
>>> print("Welcome to python!")
Welcome to python!
>>> print('Welcome', 'to' , 'python!')
Welcome to python!
>>> print('Welcome\nto\npython!')
Welcome
to
python!
>>> print('Welcome\nto\n\npython!')
Welcome
to

python!
>>> print('this is a longer string, so we\split over two lines')
this is a longer string, so we\split over two lines
>>> print('this is a longer string, so we \ split over two lines')
this is a longer string, so we \ split over two lines
>>> print('Sum is', 7+3)
Sum is 10
>>> type(word)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'word' is not defined. Did you mean: 'ord'?
>>> type('word')
<class 'str'>
>>> print('int(5.2', 'truncates 5.2 to', int(5.2))
int(5.2 truncates 5.2 to 5
>>> int(5.2)
5
>>> print('Display "hi" in quotes')
Display "hi" in quotes
>>> print('Display 'hi' in quotes')
  File "<stdin>", line 1
    print('Display 'hi' in quotes')
          ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> print('Display \'hi\' in quotes')
Display 'hi' in quotes
>>> print("Display the name o 'Brien")
Display the name o 'Brien
>>> print('Display \"hi\" in quotes')
Display "hi" in quotes
>>> print("""Display "hi" and 'bye'  quotes""")
Display "hi" and 'bye'  quotes
>>> triple_quoted_string="""This is s triple-quoted string that spans two lines"""
>>> print(triple_quoted_string)
This is s triple-quoted string that spans two lines
>>> triple_quoted_string
'This is s triple-quoted string that spans two lines'
>>> print("""This is a lenghty multiline string containing a few lines \ of text""")
This is a lenghty multiline string containing a few lines \ of text
>>> name=("What is your name?")
>>> name=input("What is your name?")
What is your name?Paul
>>> name
'Paul'
>>> print(name)
Paul
>>> name=input("What is your name?")
What is your name?'paul'
>>> name
"'paul'"
>>> print(name)
'paul'
>>> value1=input('Enter first number: ')
Enter first number: 7
>>> 7
7
>>> value2=input('Enter second number: ')
Enter second number: 8
>>> value1+value2
'78'
>>> value=input('Enter an integer: ')
Enter an integer: 90
>>> another_value=input('Enter another interger: ')
Enter another interger: 10
>>> value+another_value
'9010'
>>> int(10.5)
10
>>> float('6.2')
6.2
>>>
>>> float('6.2')*3.3
20.46
>>>
